<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles -->
    <string name="app_name">Numbers Convert</string>
    <string name="calculator">Calculator</string>
    
    <!-- Views -->
    <string name="default_number_view_text">000</string>
    <string name="select_system_dialog_title">Select number system</string>
    <string name="empty_string"></string>
    <string name="ClearableEditText_android_hint"></string>
    
    <!-- MainActivity -->
    <string name="number">Number</string>
    <string name="result">Result</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="change_number_system_error">Change system or remove wrong symbols</string>
    
    <!-- Solution -->
	<string name="solution">Solution</string>
    <string name="solution_from">Converting from</string>
    <string name="solution_to_dec">to decimal</string>
    <string name="solution_from_dec_to">Converting from decimal to</string>
    <string name="solution_answer">Answer (underlined digits, the integral part in reverse order)</string>
    <string name="solution_operation">Produce the required action</string>
    
    <!-- CalcActivity -->
    <string name="operation_plus">"&#43;"</string>
    <string name="operation_minus">"&#8722;"</string>
    <string name="operation_cross">"&#215;"</string>
    <string name="operation_divide">"&#247;"</string>
    <string name="infinity">"Infinity"</string>
    
    <!-- PreferencesActivity -->
    <string name="preferences">Preferences</string>
    <string name="pref_use_app_keyboard">"Use the app's keyboard"</string>
    <string name="pref_on_click_system">Show by pressing at system</string>
    <string name="pref_system_hots">Often used systems</string>
    <string name="pref_system_last">Last used systems</string>
    <string name="pref_system_list_all">All systems in a list</string>
    <string name="pref_system_table_all">All systems in a table</string>
    <string name="pref_system_none">Do nothing</string>
    <string name="pref_hots_fix_28AG">Fix often used the system: 2,8,10,16</string>
    <string name="pref_donate">Donate</string>
    <string name="pref_about">About</string>
    <string name="by_wnezros">by WNeZRoS</string>
    <string name="e_mail">Email: wnezros@gmail.com</string>
    <string name="site">Site: wnezros.com</string>
    <string name="pref_alert">Restart app for corrent apply preferences.</string>
    
    <!-- NewsActivity -->
    <string name="new_version">New version</string>
    <string name="continue_label">Continue</string>
    <string name="send_me_bugs">You can always send your suggestions and remarks on\nwnezros@gmail.com</string>
    <string name="email">wnezros@gmail.com</string>
    <string name="in_new_version">In new version:</string>
    <string name="in_new_version_info">"3.1.3:
- Fixed division in calculator
- Improved display of the tablets

3.1.2:
- Bug Fixes
        
3.1.1:
- Added solution in calculator
- Added cursor in text fields
        
3.1.0:
- Solution added
        
3.0.5:
- Fixed crash when using the system keyboard
- Improved interface for devices with small screen resolution

3.0.4:
- Fix interface
        
3.0.3:
- Added settings (actions by clicking on the input field of the number system, etc.)
        
3.0.2:
- Translate of fractional numbers
- Fix interface

3.0.1:
- Interface update

3.0.0:
- The new interface:
    Text fields with the cleaning button;
    Dynamically changeable keyboard to enter numbers;
    Input field of number systems with a history of use (by pressing the number);
- Translation of numbers of any length
- Bug Fixes"</string>
</resources>
