<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/preferences">
    <ListPreference 
        android:entries="@array/pref_systems_action_values" 
        android:entryValues="@array/pref_systems_actions" 
        android:key="systems_action" 
        android:title="@string/pref_on_click_system" 
        android:defaultValue="1"/>
    <CheckBoxPreference 
        android:title="@string/pref_hots_fix_28AG" 
        android:key="hots_fix" 
        android:defaultValue="true"/>
    <CheckBoxPreference 
        android:title="@string/pref_use_app_keyboard" 
        android:key="use_app_keyboard" 
        android:defaultValue="true"/>
    <!-- 
    <Preference 
    	android:title="@string/pref_donate" 
    	android:key="donate"/> 
    -->
    <Preference 
        android:title="@string/pref_about" 
        android:key="about"/>
</PreferenceScreen>