<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".NewsActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autoLink="email"
        android:gravity="center_horizontal"
        android:text="@string/send_me_bugs" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/in_new_version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:layout_margin="3dp"
        android:background="@drawable/edittext_focus_background">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/in_new_version_info"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/left_button_background"
        android:padding="20dp"
        android:text="@string/continue_label"
        android:textColor="@android:color/black" />

</LinearLayout>