<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/titlebar_height"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="10dip"
        android:contentDescription="@string/empty_string"
        android:src="@drawable/icon" />

    <TextView
        android:id="@android:id/title"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textColor="#FFF" />

    <ImageView
        android:id="@+id/calculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_marginRight="5dip"
        android:contentDescription="@string/calculator"
        android:src="@drawable/calculator_icon" />

</LinearLayout>